calendar POST and PUT refactor - proper handling CORS in all endpoints (Access-Control-Allow-Headers and OPTION for all) - EnableEureka environment variable - AccessControlAllowOrigin environment variable (default *) - EncodeWithStatus method for set response status code - EmptyRequest method for convenient handle request with no values - endpoint to load all calendar types (save and update needs to be implemented later) - swagger fixes
